--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   speech_to_text: ^7.0.0
   flutter_gemini: ^3.0.0
+  flutter_simple_calculator: ^2.4.0
+  gap: ^3.0.1
+  simple_calculator_flutter: ^1.0.1
 
 dev_dependencies:
   flutter_test:
