--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_simple_calculator: ^2.4.0
   gap: ^3.0.1
   simple_calculator_flutter: ^1.0.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
